Show dynamic map on alerts index page with radius of alerts. Fixes List of email alerts (from profile page) is not responsive #1610

--- a/app/themes/standard/assets/stylesheets/standard/partials/_profile.scss
+++ b/app/themes/standard/assets/stylesheets/standard/partials/_profile.scss
@@ -17,4 +17,10 @@ ul.email-alert-list {
   h4 {
     margin: 16px 0;
   }
+
+  .map { 
+    height: 300px;
+    // A green colour that you might see on a map. Display this while loading the map
+    background-color: #d1e6d9;
+  }
 }
